--- a/index.html
+++ b/index.html
@@ -7,17 +7,18 @@
  <h1>Mohammed el maddahi</h1>
  <h2>Mijn hobbies</h2>
  <ul>
- <li><a href="https://nl.wikipedia.org/wiki/Computerspel">Gamen</a> 
- <li><a href="https://nl.wikipedia.org/wiki/Televisie"> Tv kijken</a>
- <li><a href="https://nl.wikipedia.org/wiki/Film_(cinematografie)">films kijken</a>
+  <li><a href="https://nl.wikipedia.org/wiki/Computerspel">Gamen</a> 
+  <li><a href="https://nl.wikipedia.org/wiki/Televisie"> Tv kijken</a>
+  <li><a href="https://nl.wikipedia.org/wiki/Film_(cinematografie)">films kijken</a>
  </ul>
  <h2>Mijn favoriete series</h2>
  <ol>
- <li> Yu Yu Hakusho
- <li> Mob Psycho 100
- <li> One Punch Man
- <li> <a href="https://www.youtube.com/channel/UCdoPCztTOW7BJUPk2h5ttXA">The 2 million subscriber count youtuber callmekevin (Subscribe right now)</a>
+  <li> Yu Yu Hakusho
+  <li> Mob Psycho 100
+  <li> One Punch Man
+  <li> <a href="https://www.youtube.com/channel/UCdoPCztTOW7BJUPk2h5ttXA">The 2 million subscriber count youtuber callmekevin (Subscribe right now)</a>
  <br>
  <img src="https://vignette.wikia.nocookie.net/callmekevin/images/4/41/Betterkevin.jpg/revision/latest?cb=20190207042215">
+   alt="callmekevin smiling at the camera wearing sunglasses">
   <body>
    </html> 
